EPBDS-12991 add(CustomDatatype[][], CustomDatatype[], CustomDatatype[]) returns Object[][] instead of CustomDatatype[][]